--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jeremy-fitness-frontend",
   "version": "1.0.0",
-  "description": "Frontend React para plataforma de fitness de Jeremy",
+  "description": "Frontend React para plataforma de fitness NackRat",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
