--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "short_name": "Jeremy Fitness",
-  "name": "Jeremy Fitness Pro - Plataforma Exclusiva",
-  "description": "Plataforma de fitness exclusiva de Jeremy - Entrenamiento personalizado, contenido premium y comunidad fitness",
+  "short_name": "NackRat",
+  "name": "NackRat - El Verdadero Valhalla",
+  "description": "Plataforma de fitness NackRat - El Verdadero Valhalla. Entrenamiento personalizado, contenido premium y comunidad fitness",
   "icons": [],
   "start_url": ".",
   "display": "standalone",
