--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Configuración del Frontend - Jeremy Fitness Platform
 
 # API Backend URL
-REACT_APP_API_URL=http://localhost:5000/api
+REACT_APP_API_URL=https://jeremyfitnessbackend-production.up.railway.app/api
 
 # Entorno
 REACT_APP_ENV=development
@@ -16,7 +16,7 @@ REACT_APP_GOOGLE_ANALYTICS_ID=GA_MEASUREMENT_ID
 REACT_APP_SENTRY_DSN=your_sentry_dsn_here
 
 # Configuración de Socket.io (para chat en vivo)
-REACT_APP_SOCKET_URL=http://localhost:5000
+REACT_APP_SOCKET_URL=https://jeremyfitnessbackend-production.up.railway.app
 
 # Configuración de archivos
 REACT_APP_MAX_FILE_SIZE=500000000
@@ -26,4 +26,4 @@ REACT_APP_ALLOWED_FILE_TYPES=video/mp4,video/webm,image/jpeg,image/png,image/gif
 REACT_APP_PWA_ENABLED=true
 REACT_APP_SITE_NAME=Jeremy Fitness Pro
 REACT_APP_SITE_DESCRIPTION=Plataforma exclusiva de fitness con contenido premium
-REACT_APP_SITE_URL=https://jeremyfitness.com
+REACT_APP_SITE_URL=https://nackrat.netlify.app
