--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
+    "baseline-browser-mapping": "^2.9.16",
     "postcss": "^8.4.32",
     "source-map-explorer": "^2.5.3",
     "tailwindcss": "^3.4.0"
